# dataseries

./: README.md
.github/workflows/: build-java.yml  build-rs.yml  build.yml  publish-java.yml  publish-rs.yml
.github/workflows/rust/: build-rs.yml  publish-rs.yml
java/: README.md  SIDENOTES.md  pom.xml
java/src/main/java/com/dataseries/: Cursor.java  CursorIterator.java  DataPoint.java  DataPoints.java  IterableSeries.java  Merge.java  Series.java  Union.java  UnionResult.java  Value.java
java/src/main/java/io/github/cboudereau/dataseries/: DataPoint.java  IterableSeries.java  Merge.java  Series.java  Union.java  UnionResult.java
java/src/test/java/com/dataseries/: CursorIteratorTest.java  CursorTest.java  DataPointTest.java  MergeTest.java  UnionTest.java  ValueTest.java
java/src/test/java/io/github/cboudereau/dataseries/: CursorIteratorTest.java  CursorTest.java  DataPointTest.java  MergeTest.java  UnionTest.java  ValueTest.java
java/src/test/java/io/github/cboudereau/dataseries/snippets/: CrdtTest.java  IntersectionTest.java  MergeTest.java  SamplesTest.java  SimpleTest.java
rust/: Cargo.toml  README.md
rust/benches/: series_benchmark.rs
rust/examples/: crdt.rs  intersection.rs  merge.rs  simple.rs
rust/src/: datapoint.rs  lib.rs  merge.rs  union.rs  versioned_value.rs
rust/tests/: union_test.rs
