[package]
name = "dataseries"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[dev-dependencies]
criterion = "^0.5.1"
rand = "^0.8.5"

[[bench]]
name = "series_benchmark"
harness = false

[profile.bench]
debug = true
[profile.release]
debug = true
